--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta name="description" content="Sector's Edge tournament">
-  <meta name="keywords" content="#7Days7Websites, the noah, vercidium, sectors edge">
+  <meta name="keywords" content="#7Days7Websites, the noah, vercidium, sectors edge, tournament, salvage cup">
   <meta name="author" content="The Noah">
   <meta property="og:description" content="Sector's Edge tournament">
   <meta property="og:type" content="website">
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div style="flex:1">
-    <img src="banner.png" width="100%">
+    <div class="banner"></div>
     <div class="section">
       <h1>Sector's Edge Tournament</h1>
       <p>We will be running a tournament on the 4th of April at 7pm GMT!</p>
