--- a/src/style.scss
+++ b/src/style.scss
@@ -172,6 +172,23 @@ footer{
   }
 }
 
+.banner{
+  width: 100%;
+  height: 128px;
+  background: url("background.jpg") center no-repeat;
+  background-size: cover;
+  position: relative;
+
+  &::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: url("salvage-cup.png") center no-repeat;
+    background-size: 30%;
+    position: absolute;
+  }
+}
+
 .section{
   width: 65%;
   margin: 0 auto;
