--- a/src/style.scss
+++ b/src/style.scss
@@ -175,17 +175,14 @@ footer{
 .banner{
   width: 100%;
   height: 128px;
-  background: url("background.jpg") center no-repeat;
+  background: url("banner.png") center no-repeat;
   background-size: cover;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  &::after{
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: url("salvage-cup.png") center no-repeat;
-    background-size: 30%;
-    position: absolute;
+  svg{
+    height: 128px;
   }
 }
 
