Fix old project name

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,10 +10,10 @@
   <meta property="og:description" content="Sector's Edge tournament">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
-  <meta property="og:title" content="Sector's Edge Tournament Teams">
-  <meta property="og:site_name" content="Sector's Edge Tournament Teams">
-  <meta property="og:url" content="https://the-noah.github.io/sectors-edge-tournament-teams">
-  <meta property="og:image" content="https://the-noah.github.io/sectors-edge-tournament-teams/favicon.ico">
+  <meta property="og:title" content="Sector's Edge Tournament">
+  <meta property="og:site_name" content="Sector's Edge Tournament">
+  <meta property="og:url" content="https://the-noah.github.io/sectors-edge-tournament">
+  <meta property="og:image" content="https://the-noah.github.io/sectors-edge-tournament/favicon.ico">
   <title>Sector's Edge Tournament</title>
   <style><%- css -%></style>
 </head>
