Update meta description

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <meta name="description" content="Sector's Edge tournament">
+  <meta name="description" content="Sector's Edge tournament information and teams">
   <meta name="keywords" content="#7Days7Websites, the noah, vercidium, sectors edge, tournament, salvage cup">
   <meta name="author" content="The Noah">
-  <meta property="og:description" content="Sector's Edge tournament">
+  <meta property="og:description" content="Sector's Edge tournament information and teams">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="Sector's Edge Tournament">
