Use static-site-generator

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,7 +15,7 @@
   <meta property="og:url" content="https://the-noah.github.io/sectors-edge-tournament">
   <meta property="og:image" content="https://the-noah.github.io/sectors-edge-tournament/favicon.ico">
   <title>Sector's Edge Tournament</title>
-  <style><%- css -%></style>
+  <style><%- css.style -%></style>
 </head>
 <body>
   <div style="flex:1">
