--- a/src/style.scss
+++ b/src/style.scss
@@ -10,7 +10,7 @@ $border-radius: 5px;
 }
 
 *{
-  color: #555;
+  color: #444;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 }
@@ -18,6 +18,10 @@ $border-radius: 5px;
 :root{
   font-size: 18px;
   line-height: 1.5;
+
+  @include mobile{
+    font-size: 16px;
+  }
 }
 
 html, body{
@@ -26,7 +30,7 @@ html, body{
 
 body{
   margin: 0;
-  background-color: #FAFAFA;
+  background-color: #F5F5F5;
   font-family: Montserrat, sans-serif;
   display: flex;
   flex-direction: column;
@@ -66,23 +70,24 @@ a.animated{
   }
 }
 
-h1, h4{
+h1, h2{
   margin: 0;
 }
 
-h1, h4{
+h1, h2{
   text-transform: uppercase;
-  letter-spacing: 2px;
 }
 
 h1{
   color: #252525;
-  font-size: 1.5rem;
+  font-size: 2rem;
   letter-spacing: 4px;
 }
 
-h4{
-  font-size: 1.1rem;
+h2{
+  color: #111;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
 }
 
 p img{
@@ -158,8 +163,37 @@ footer{
   }
 
   & > p{
+    margin-top: 2rem;
     text-align: center;
   }
+}
+
+table{
+  margin: 2rem 0;
+  border-collapse: collapse;
+}
+
+th, td{
+  padding: .5rem 1rem;
+  font-size: .95rem;
+  border-bottom: 2px solid rgba($color-primary, .3);
+
+  &:first-child{
+    padding-left: 0;
+  }
+}
+
+th{
+  color: #404040;
+  text-align: left;
+}
+
+ul{
+  margin: .5rem 0;
+}
+
+#tournaments > div{
+  margin: 2rem 0;
 }
 
 .button{
@@ -203,6 +237,7 @@ footer{
 }
 
 .cards{
+  margin-top: 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2rem;
