--- a/src/style.scss
+++ b/src/style.scss
@@ -70,6 +70,13 @@ a.animated{
   }
 }
 
+p svg{
+  width: 1rem;
+  height: 1rem;
+  position: relative;
+  top: .15em;
+}
+
 h1, h2{
   margin: 0;
 }
