Add tournaments link in footer

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -114,6 +114,7 @@
       <div>
         <span>Navigation</span>
         <a class="animated" href="#">Home</a>
+        <a class="animated" href="#tournaments">Tournaments</a>
         <a class="animated" href="https://sectorsedge.com/" target="_blank" rel="noopener noreferrer">Game</a>
       </div>
       <div>
