--- a/src/style.scss
+++ b/src/style.scss
@@ -122,15 +122,14 @@ small{
 footer{
   padding-top: 80px;
   padding-bottom: 40px;
-  background-image: url("veteranmin.jpg");
-  background-position: top 60px left 0px;
-  background-repeat: no-repeat;
   background-color: #000;
+  background-image: url("agamanheavy.png");
+  background-repeat: no-repeat;
+  background-size: contain;
   font-size: .9rem;
 
   @include mobile{
-    background-position: bottom left -32px;
-    background-size: 164px;
+    background-position: bottom;
   }
 
   &, *{
@@ -157,14 +156,19 @@ footer{
       }
 
       & > span{
-        color: #FFFA;
+        color: #C0C0C0;
         text-transform: uppercase;
         font-size: .9rem;
         letter-spacing: 2px;
       }
 
+      & > a{
+        letter-spacing: 1px;
+      }
+
       & > *{
         margin-bottom: 4px;
+        text-shadow: 0 0 .3rem #000;
       }
     }
   }
