Change to no current tournament

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,9 +24,9 @@
     </div>
     <div class="section">
       <h1>Sector's Edge Tournament</h1>
-      <p>We will be running a tournament on the 4th of April at 7pm GMT!</p>
+      <p>There is currently no tournament scheduled, please check back on this page at a later time or join the <a href="https://discordapp.com/invite/87NvZhn" target="_blank" rel="noopener noreferrer">Discord</a> server.</p>
       <h2>Info</h2>
-      <p>It will be a knockout tournament, where each round is best-of-three on three different maps, on servers chosen for ping fairness.</p>
+      <p>A knockout tournament, where each round is best-of-three on three different maps, on servers chosen for ping fairness.</p>
       <p>As we are streaming the tournament on <a href="https://twitch.tv/vercidium" target="_blank" rel="noopener noreferrer">Twitch</a> and will use recorded footage to advertise the game, we have decided to run the Salvage game mode as it better showcases the game mechanics and maps.</p>
       <h2>Rewards</h2>
       <p>
