Add social image

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Sector's Edge Tournament">
   <meta property="og:site_name" content="Sector's Edge Tournament">
   <meta property="og:url" content="https://the-noah.github.io/sectors-edge-tournament">
-  <meta property="og:image" content="https://the-noah.github.io/sectors-edge-tournament/favicon.ico">
+  <meta property="og:image" content="https://the-noah.github.io/sectors-edge-tournament/social.png">
   <title>Sector's Edge Tournament</title>
   <style><%- css.style -%></style>
 </head>
