--- a/src/style.scss
+++ b/src/style.scss
@@ -242,7 +242,7 @@ ul{
     display: flex;
     flex-direction: column;
     border-radius: $border-radius;
-    -webkit-touch-callout: none;
+    transition: box-shadow .15s ease-out;
 
     @include mobile{
       padding: .4rem .9rem;
