Move members margin to be in CSS

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -84,7 +84,7 @@
                     <%= tournament.prizes[team.place - 1] %> <%- include("proton") %> for each player.
                   <% } %>
                 </p>
-                <span style="margin-bottom:.5rem">Members:</span>
+                <span>Members:</span>
                 <ul>
                   <% team.members.forEach((player) => { %>
                     <li><%= player %></li>
