--- a/src/style.scss
+++ b/src/style.scss
@@ -253,6 +253,10 @@ ul{
       box-shadow: 0 4px 24px rgba(0, 0, 0, .18);
     }
 
+    & > span{
+      margin-bottom: .5rem;
+    }
+
     p{
       font-size: .9rem;
     }
