--- a/src/index.ejs
+++ b/src/index.ejs
@@ -75,7 +75,9 @@
           </table>
           <h2>Teams</h2>
           <div class="cards">
-            <% for(const team of tournament.teams.sort((a, b) => a.place > b.place)){ %>
+            <% tournament.teams.sort((a, b) => a.place > b.place).forEach((team, i) => {
+              team.place = i + 1;
+            %>
               <div>
                 <h2><%= team.name %></h2>
                 <p>
@@ -91,7 +93,7 @@
                   <% }) %>
                 </ul>
               </div>
-            <% } %>
+            <% }) %>
           </div>
         </div>
       <% }) %>
