Add info about new tournament

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,9 +24,10 @@
     </div>
     <div class="section">
       <h1>Sector's Edge Tournament</h1>
-      <p>There is currently no tournament scheduled, please check back on this page at a later time or join the <a href="https://discordapp.com/invite/87NvZhn" target="_blank" rel="noopener noreferrer">Discord</a> server.</p>
+      <p>We're starting to plan our next tournament! If you're keen, please fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSeD20bEe1DzDNT9x2j_sY9qXHZAzUY6V2Ia8i2UPX1nOV79LQ/viewform" target="_blank" rel="noopener noreferrer">this form</a> so we can get a sense of numbers and which weekends people are available. We're looking for teams of 6 members (+1 reserve if possible) and it will be the Salvage game mode.</p>
       <h2>Info</h2>
-      <p>A knockout tournament, where each round is best-of-three on three different maps, on servers chosen for ping fairness.</p>
+      <p>Details are still being planned, please check back on this page at a later time or join the official <a href="https://discordapp.com/invite/87NvZhn" target="_blank" rel="noopener noreferrer">Discord</a> server.</p>
+      <!-- <p>A knockout tournament, where each round is best-of-three on three different maps, on servers chosen for ping fairness.</p>
       <p>As we are streaming the tournament on <a href="https://twitch.tv/vercidium" target="_blank" rel="noopener noreferrer">Twitch</a> and will use recorded footage to advertise the game, we have decided to run the Salvage game mode as it better showcases the game mechanics and maps.</p>
       <h2>Rewards</h2>
       <p>
@@ -34,7 +35,7 @@
         5000 <%- include("proton") %> for each player in the runner-up team.
       </p>
       <p>Register your team of 4, or sign up individually and we will place you in a team: <a href="https://sectorsedge.com/tournament" target="_blank" rel="noopener noreferrer">sectorsedge.com/tournament</a>.</p>
-      <p>See you all at the Salvage Cup! May the best team win!</p>
+      <p>See you all at the Salvage Cup! May the best team win!</p> -->
       <h2>Watch</h2>
       <p>Streaming at: <a href="https://twitch.tv/vercidium" target="_blank" rel="noopener noreferrer">twitch.tv/vercidium</a>.</p>
     </div>
