--- a/src/index.ejs
+++ b/src/index.ejs
@@ -24,20 +24,26 @@
     </div>
     <div class="section">
       <h1>Sector's Edge Tournament</h1>
-      <p>We're starting to plan our next tournament! If you're keen, please fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSeD20bEe1DzDNT9x2j_sY9qXHZAzUY6V2Ia8i2UPX1nOV79LQ/viewform" target="_blank" rel="noopener noreferrer">this form</a> so we can get a sense of numbers and which weekends people are available. We're looking for teams of 6 members (+1 reserve if possible) and it will be the Salvage game mode.</p>
-      <h2>Info</h2>
-      <p>Details are still being planned, please check back on this page at a later time or join the official <a href="https://discordapp.com/invite/87NvZhn" target="_blank" rel="noopener noreferrer">Discord</a> server.</p>
-      <!-- <p>A knockout tournament, where each round is best-of-three on three different maps, on servers chosen for ping fairness.</p>
-      <p>As we are streaming the tournament on <a href="https://twitch.tv/vercidium" target="_blank" rel="noopener noreferrer">Twitch</a> and will use recorded footage to advertise the game, we have decided to run the Salvage game mode as it better showcases the game mechanics and maps.</p>
-      <h2>Rewards</h2>
+      <p>Salvage Cup 3 is tournament entries are now open! Join the official <a href="https://discordapp.com/invite/87NvZhn" target="_blank" rel="noopener noreferrer">Discord</a> server to stay up to date.</p>
+      <h2>Details</h2>
       <p>
-        10000 <%- include("proton") %> for each player in the winning team.<br>
-        5000 <%- include("proton") %> for each player in the runner-up team.
+        <ul>
+          <li>30th of May, 6pm GMT</li>
+          <li>Teams of 6 members</li>
+          <li>Salvage Game Mode</li>
+          <li>Best-of-1 Round Robin for the first round, then the top 4 teams move into a bo3 for the semi-finals and finals</li>
+        </ul>
       </p>
-      <p>Register your team of 4, or sign up individually and we will place you in a team: <a href="https://sectorsedge.com/tournament" target="_blank" rel="noopener noreferrer">sectorsedge.com/tournament</a>.</p>
-      <p>See you all at the Salvage Cup! May the best team win!</p> -->
+      <h2>Rewards</h2>
+      <p>This time there is special limited edition rewards as well as the usual <%- include("proton") %> Protons. Rewards are given to each player on the team.</p>
+      <p>
+        1st place: 10000 <%- include("proton") %>, a unique weapon skin for a weapon of your choice and an in-game <b>Champion</b> badge+title on the scoreboard and kill-cam.<br>
+        2nd place: 5000 <%- include("proton") %> and an in-game <b>Runner-Up</b> badge+title on the scoreboard and kill-cam.
+      </p>
+      <h2>Sign Up</h2>
+      <p>Entries close on the 30th of May at 5pm GMT, one hour before the tournament commences. Sign up <a href="https://sectorsedge.com/tournament" target="_blank" rel="noopener noreferrer">here</a>.</p>
       <h2>Watch</h2>
-      <p>Streaming at: <a href="https://twitch.tv/vercidium" target="_blank" rel="noopener noreferrer">twitch.tv/vercidium</a>.</p>
+      <p>The tournament will be streaming at <a href="https://twitch.tv/vercidium" target="_blank" rel="noopener noreferrer">twitch.tv/vercidium</a>.</p>
     </div>
     <div class="section" id="tournaments">
       <h2>Past Tournaments</h2><br>
