--- a/src/style.scss
+++ b/src/style.scss
@@ -71,7 +71,7 @@ a.animated{
   }
 }
 
-p svg{
+p svg, li svg{
   width: 1.2rem;
   height: 1.2rem;
   position: relative;
@@ -96,6 +96,11 @@ h2{
   color: #111;
   font-size: 1.2rem;
   letter-spacing: 2px;
+}
+
+b{
+  color: #333;
+  letter-spacing: 1px;
 }
 
 p img{
