--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,7 +18,18 @@
   <style><%- css.style %></style>
 </head>
 <body>
-  <% const proton = include("proton"); %>
+  <%
+    const proton = include("proton");
+    const getPlayer = (player) => {
+      if(!players[player]){
+        return player;
+      }else if(players[player] && player < 0){
+        return players[player];
+      }
+
+      return `<a href="https://sectorsedge.com/player/${player}" target="_blank" rel="noopener noreferrer">${players[player]}</a>`;
+    };
+  %>
   <div style="flex:1">
     <div class="banner">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 197.75 36"><g stroke-width=".972"><path d="M42.839 1.258v25.255l4.76-2.748-.02-19.772zm144.68 3.261l-9.518 5.508v21.969l4.756-2.746v-5.493l4.757 2.746 9.513-5.492V10.027zm-86.646 0l-9.509 5.507V21.01l9.513 5.492 4.757-2.746v2.746l-4.756 2.747v5.492l9.513-5.492V10.026zm-69.459.015l-9.515 5.492V21.01l9.515 5.495 2.856-1.648V19.36l-2.856 1.649-4.758-2.744V12.77l4.762-2.748 4.76 2.748v10.992l4.758 2.745V10.026l-9.514-5.492zm48.543 0l-9.514 5.492V21.01l9.514 5.495 2.856-1.648V19.36l-2.856 1.649-4.757-2.744V12.77l4.76-2.748 4.763 2.748v10.992l4.757 2.745V10.026l-9.515-5.492zm41.881 0l-9.514 5.492V21.01l9.515 5.495 9.514-5.492v-5.495l-9.514 5.492-4.758-2.744V12.77l9.514-5.49zm23.79 0l-9.515 5.492V21.01l9.515 5.495 9.514-5.492v-5.494l-9.514 5.491-4.757-2.744V12.77l9.514-5.49zm-135.39.135L.725 10.161v2.747l13.081 7.552-3.567 2.06-5.946-3.432v-1.374l-3.568-2.06v5.491l9.513 5.492 9.512-5.492V18.4L6.67 10.848l3.568-2.06 5.945 3.433v1.373l3.567 2.06v-5.496zm53.53 2.606v10.986l-4.756 2.747-4.759-2.747V7.277l-4.758 2.746v10.985l9.513 5.493 9.516-5.492V10.023zm107.56 0v10.987l-4.756 2.747-4.759-2.748V7.277l-4.759 2.746v10.985l9.513 5.493 9.516-5.492V10.023zm-70.456 2.745l4.757 2.746v5.494l-4.757 2.745-4.757-2.746v-5.493zm86.638 0l4.756 2.746v5.493l-4.756 2.746-4.756-2.746v-5.493zm-63.297 1.374l-4.758 2.747v2.745l2.38 1.374 4.755-2.748v-2.744z" fill="#ececec"/><path d="M197.03 10.017l-4.754 2.746v5.495l-4.76 2.746v5.492l9.514-5.492zm-156.09.002l-4.758 2.744v10.993l4.758 2.745zm1.905 0v16.487l4.76-2.748V12.767zm25.69 0l-4.754 2.744v5.495l-4.757 2.748v5.49l9.51-5.492zm20.95 0l-4.773 2.746.006 10.987 4.767 2.748zm20.91 0l-4.758 2.746v5.493l-4.755 2.748v5.49l4.755-2.746v2.743l-4.753 2.75v5.492l9.513-5.492zm65.7.004l-4.753 2.744v5.494l-4.76 2.747.003 5.492 9.511-5.492zm-156.34.135l-3.566 2.06v1.373l3.567 2.059zm106.84 2.61l-4.757 2.745v2.748l4.758-2.748zm-113.98 1.51l-2.377 1.372v2.746l3.567 2.059-3.567 2.06v4.12l9.513-5.49v-2.749zm118.73 1.235l-9.51 5.495v5.49l9.51-5.49zm23.79.002l-9.517 5.495v5.492l9.513-5.494zm-120.87 3.84l-2.857 1.65V26.5l2.857-1.65zm48.543 0l-2.855 1.65V26.5l2.855-1.65z" opacity=".3"/><path d="M21.893 10.017v10.987l4.758 2.748 4.763 2.748v-5.496l-4.758-2.748-.005-5.493zm48.545 0v10.987l4.756 2.748 4.765 2.748v-5.496l-4.76-2.748-.005-5.493zm107.56 0v21.972l4.758-2.746V23.75l4.755 2.747v-5.493l-4.757-2.746v-5.495zm-128.5.002v10.985l9.513 5.492v-5.49l-4.76-2.748v-5.495zm41.881 0v10.985l9.513 5.492v-5.492l-4.756-2.744v-5.497zm20.94 0v10.985l9.515 5.492v-5.492l-4.758-2.744v-5.497zm44.739.004v10.985l9.511 5.492.002-5.492-4.76-2.746v-5.495zm-20.946.002v10.983l9.511 5.494.002-5.492-4.76-2.748v-5.495zm-135.39.134v2.747l9.511 5.49V15.65zm118.73 3.98v2.745l2.38 1.375v-2.748zM.722 15.65l.002 5.49 9.511 5.493v-4.117l-5.946-3.432v-1.375z" opacity=".15"/></g><path d="M42.839 1.258v25.255l4.76-2.748-.02-19.772zm144.68 3.261l-9.517 5.508v21.969l4.756-2.746v-5.493l4.757 2.746 9.513-5.492V10.027zm-86.645 0l-9.509 5.507V21.01l9.513 5.492 4.757-2.746v2.746l-4.756 2.747v5.492l9.513-5.492V10.026zm-69.459.015L21.9 10.026V21.01l9.515 5.495 2.856-1.648V19.36l-2.856 1.649-4.758-2.744V12.77l4.762-2.748 4.76 2.748v10.992l4.758 2.745V10.026l-9.514-5.492zm48.543 0l-9.514 5.492V21.01l9.514 5.495 2.856-1.648V19.36l-2.856 1.649-4.757-2.744V12.77l4.76-2.748 4.763 2.748v10.992l4.757 2.745V10.026l-9.515-5.492zm41.881 0l-9.514 5.492V21.01l9.515 5.495 9.514-5.492v-5.495l-9.514 5.492-4.758-2.744V12.77l9.514-5.49zm23.79 0l-9.515 5.492V21.01l9.515 5.495 9.514-5.492v-5.494l-9.514 5.49-4.757-2.743V12.77l9.514-5.49zm-135.39.135L.726 10.16v2.747l13.081 7.551-3.567 2.06-5.946-3.432v-1.374l-3.568-2.06v5.492l9.513 5.492 9.512-5.492V18.4l-13.08-7.552 3.568-2.06 5.945 3.433v1.373l3.567 2.06v-5.496zm53.53 2.606V18.26l-4.756 2.747-4.759-2.747V7.277l-4.758 2.746v10.985L59.01 26.5l9.516-5.492V10.023zm107.56 0v10.987l-4.756 2.747-4.759-2.748V7.277l-4.759 2.746v10.985l9.513 5.493 9.516-5.492V10.023zm-70.456 2.745l4.757 2.746v5.494l-4.757 2.745-4.757-2.746v-5.493zm86.638 0l4.756 2.746v5.493l-4.756 2.746-4.756-2.746v-5.493zm-63.297 1.374l-4.758 2.747v2.745l2.38 1.374 4.755-2.748v-2.744z" fill="none" opacity=".3" stroke="#000" stroke-width="1.495"/></svg>
@@ -63,7 +74,7 @@
             Held at <%= date.getUTCHours() > 12 ? date.getUTCHours() - 12 : date.getUTCHours() === 0 ? 12 : date.getUTCHours() %>:<%= `${date.getUTCMinutes() < 10 ? "0" : ""}${date.getUTCMinutes()}` %><%= date.getUTCHours() >= 12 ? "pm" : "am" %> UTC on <%= date.getUTCFullYear() %>-<%= date.getUTCMonth() + 1 %>-<%= date.getUTCDate() %>.
             <a href="https://challonge.com/<%= tournament.bracket %>" target="_blank" rel="noopener noreferrer">View bracket</a>.
           </p>
-          <p>Casted by <%= tournament.casters.join(" and ") %>.</p>
+          <p>Casted by <%- tournament.casters.map((player) => getPlayer(player)).join(" and ") %>.</p>
           <h2>Statistics</h2>
           <table>
             <thead>
@@ -78,7 +89,7 @@
                 <tr>
                   <td><%= stat.name %></td>
                   <td><%= stat.value %></td>
-                  <td><%= stat.player %></td>
+                  <td><%- getPlayer(stat.player) %></td>
                 </tr>
               <% }) %>
             </tbody>
@@ -105,7 +116,7 @@
                 <span>Members:</span>
                 <ul>
                   <% team.members.forEach((player) => { %>
-                    <li><%= player %></li>
+                    <li><%- getPlayer(player) %></li>
                   <% }) %>
                 </ul>
               </div>
